# pmv-si-2025-2-pe7-t2-t1-g4-Fillipe

./: README.md
docs/: implantação-apresentacao.md
src/: Apresentação Versão Final.html  Formulário.html  pipeline.ipynb  pyproject.toml
src/api/: Testes.txt  main.py  modelo_catboost_grupo4.cbm  requirements.txt
