[project]
name = "etapa1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.30.1",
    "jupyter-collaboration>=4.1.0",
    "jupyterlab>=4.4.6",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "seaborn>=0.13.2",
    "us>=3.2.0",
    "catboost==1.2.8",
    "graphviz==0.21",
    "joblib==1.5.2",
    "jupytext==1.18.1",
    "markdown-it-py==4.0.0",
    "mdit-py-plugins==0.5.0",
    "mdurl==0.1.2",
    "scikit-learn==1.7.2",
    "scipy==1.16.3",
    "threadpoolctl==3.6.0",
    "lightgbm==4.6.0",
]
